# leviso

./: .env.example  .gitignore  APOLOGY.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  kconfig  test-container.sh
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
docs/: SUBSYSTEM_AUDIT.md
profile/: init  init_tiny  init_tiny.template  packages.txt
profile/etc/: group  hosts  login.defs  motd  nsswitch.conf  passwd  profile  securetty  shadow  shells  sudoers
recipes/: 00-rocky-iso.rhai  audit-libs.rhai  base.rhai  bash.rhai  coreutils.rhai  dosfstools.rhai  e2fsprogs.rhai  elfutils-libelf.rhai  findutils.rhai  gawk.rhai  glibc.rhai  grep.rhai  gzip.rhai  iproute.rhai  kmod.rhai  libacl.rhai  libattr.rhai  libbpf.rhai  libcap-ng.rhai  libcap.rhai  libmnl.rhai  libselinux.rhai  libsemanage.rhai  ncurses.rhai  openssl.rhai  pam.rhai  pcre2.rhai  readline.rhai  sed.rhai  shadow-utils.rhai  systemd.rhai  tar.rhai  util-linux.rhai  xz.rhai  zlib.rhai
recipes/lib/: rocky.rhai
src/: cache.rs  clean.rs  config.rs  download.rs  extract.rs  initramfs.rs  iso.rs  lib.rs  main.rs  preflight.rs  process.rs  qemu.rs  rebuild.rs  recipe.rs  resolve.rs  rocky_manifest.rs  timing.rs
src/artifact/: initramfs.rs  iso.rs  mod.rs  qcow2.rs  rootfs.rs  squashfs.rs  uki.rs
src/commands/: build.rs  clean.rs  download.rs  extract.rs  mod.rs  preflight.rs  run.rs  show.rs
src/common/: binary.rs  files.rs  manifest.rs  mod.rs  paths.rs  temp.rs
src/component/: builder.rs  custom.rs  definitions.rs  executor.rs  mod.rs  service.rs
src/recipe/: linux.rs  (+4 more)
templates/: grub.cfg  isolinux.cfg
tests/: README.md  boot_tests.rs  helpers.rs  integration_tests.rs  unit_tests.rs  validation_tests.rs
(+106 files in other folders)
