[package]
name = "levitateiso"
version = "0.1.0"
edition = "2024"
description = "LevitateOS ISO builder - extracts packages from Rocky ISO and creates bootable LevitateOS"
license = "MIT"

[[bin]]
name = "levitateiso"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tempfile = "3"
walkdir = "2"
