[package]
name = "leviso"
version = "0.1.0"
edition = "2021"
description = "Minimal bootable Linux ISO builder"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
distro-spec = { path = "../distro-spec" }

[dev-dependencies]
tempfile = "3"
cheat-test = { path = "../cheat-test" }
