[package]
name = "leviso"
version = "0.1.0"
edition = "2021"
description = "Minimal bootable Linux ISO builder"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
distro-spec = { path = "../distro-spec" }
distro-builder = { path = "../distro-builder" }

# Extracted crates
leviso-deps = { path = "../leviso-deps" }
leviso-elf = { path = "../leviso-elf" }
hardware-compat = { path = "../testing/hardware-compat" }

# Async runtime (minimal - heavy networking moved to leviso-deps)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "process"] }
sha2 = "0.10"
which = "7"

[dev-dependencies]
tempfile = "3"
leviso-cheat-test = "0.1"
libc = "0.2"
regex = "1"
serial_test = "3"
